// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contract-state-stream tests in node environment can track changes to a send method return value 1`] = `
Object {
  "balance": "0",
  "code": Any<String>,
  "name": undefined,
  "nonce": "1",
  "variables": Object {
    "storedData": Object {
      "name": "storedData",
      "type": "uint",
      "value": "0",
    },
  },
}
`;

exports[`contract-state-stream tests in node environment can track changes to a send method return value 2`] = `
Object {
  "balance": "0",
  "code": Any<String>,
  "name": undefined,
  "nonce": "1",
  "variables": Object {
    "storedData": Object {
      "name": "storedData",
      "type": "uint",
      "value": "5",
    },
  },
}
`;
